# vanguard-out

./: .clang-format  .gitignore  CMakeLists.txt  README.md
vanguard-cli/: CMakeLists.txt  main.cpp
vanguard-cli/disable_vanguard.vbs/: disable_vanguard.vbs  disable_vanguard_stop.vbs  enable_vanguard.vbs  enable_vanguard_restart.vbs  readme.md
vanguard-gui/: CMakeLists.txt  Main.qml  controller.cpp  controller.h  main.cpp  res.qrc
